--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,22 @@
     <string name="app_name">HappyMeal</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signup">Signup</string>
+    <string name="enter_text">Enter text</string>
+    <string name="login">Login</string>
+    <string name="phone">Phone</string>
+    <string name="enter_your_phone_number">enter your phone number</string>
+    <string name="name">Name</string>
+    <string name="enter_your_name">enter your name</string>
+    <string name="submit">Submit</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="email_address">Email address</string>
+    <string name="user_name">User name</string>
+    <string name="sign_up_btn">Sign Up</string>
+    <string name="password_confirmation">Password confirmation</string>
+    <string name="already_have_account">Already have account?</string>
+    <string name="todo">TODO</string>
+
 </resources>
